--- a/ColorTheme.html
+++ b/ColorTheme.html
@@ -38,19 +38,19 @@
           <a href="#!">Home</a>
         </li>
         <li class="nav-mobile-hide">
-          <a href="#theme-palletes" onclick="togglePallete()">Palletes</a>
+          <a href="#theme-palletes" onclick="togglePallete()">Pallete</a>
         </li>
         <!-- theme-toggle-->
         <li class="flex-item nav-item dropdown" id="theme-toggle">
-          <a href="#!"><i class="fas fa-toggle-off fa-lg"></i>Theme</a>
+          <a href="#!"><i class="fas fa-adjust fa-lg"></i>Theme</a>
           <div class="dropdown-content">
-            <p>*Theme*</p>
+            <p>-Theme-</p>
             <a href="#!" id="toggle-litera">>Litera</a><br />
             <a href="#!" id="toggle-darkly">>Darkly</a><br />
             <a href="#!" id="toggle-cyborg">>Cyborg</a><br />
             <a href="#!" id="toggle-superHero">>SuperHero</a><br />
             <a href="#!" id="toggle-pulse">>Pulse</a><br />
-            <p class="divider">*Gradient*</p>
+            <p class="divider">-Gradient-</p>
             <a href="#!" id="toggle-solar">>Solar</a><br />
             <a href="#!" id="toggle-gradient1">>Gradient1</a><br />
             <a href="#!" id="toggle-gradient2">>Gradient2</a><br />
@@ -72,7 +72,7 @@
     <main class="main-content">
       <!-- Demo Theme Palletes -->
       <section id="theme-palletes">
-        <div class="container flexbox-demo">
+        <div class="container">
           <div class="pallete">
             <span>Theme Palletes : </span>
             <span id="isPallete"></span>
@@ -112,7 +112,6 @@
         </div>
       </section>
     </main>
-
-    <script defer src="/dist/js/colorTheme.js"></script>
+    <script defer src="/js/colorTheme.js"></script>
   </body>
 </html>
