--- a/ColorTheme.html
+++ b/ColorTheme.html
@@ -34,10 +34,10 @@
       </div>
       <!-- ul Menu -->
       <ul>
-        <li class="nav-mobile-hide">
+        <li class="hide-sm">
           <a href="#!">Home</a>
         </li>
-        <li class="nav-mobile-hide">
+        <li class="hide-sm">
           <a href="#theme-palletes" onclick="togglePallete()">Pallete</a>
         </li>
         <!-- theme-toggle-->
@@ -56,12 +56,12 @@
             <a href="#!" id="toggle-gradient2">>Gradient2</a><br />
           </div>
         </li>
-        <li class="nav-mobile-hide">
+        <li class="hide-sm">
           <a href="#!">
             <i class="fas fa-search"></i>
           </a>
         </li>
-        <li class="nav-mobile-hide">
+        <li class="hide-sm">
           <a href="#!">
             <i class="fas fa-shopping-cart"></i>
           </a>
