--- a/ColorTheme.html
+++ b/ColorTheme.html
@@ -29,8 +29,12 @@
     <!--  Navbar -->
     <nav>
       <div class="brand">
-        <img src="media/logo-brid-512x512-removebg.png" alt="" />
-        <p>Aron</p>
+        <img
+          class="hide-sm"
+          src="media/logo-brid-512x512-removebg.png"
+          alt=""
+        />
+        <p class="logo hide-sm">Aron</p>
       </div>
       <!-- ul Menu -->
       <ul>
