--- a/ColorTheme.html
+++ b/ColorTheme.html
@@ -26,6 +26,24 @@
   </head>
 
   <body class="superHero">
+    <!-- Showcase -->
+    <header class="showcase-smoke" id="showcase-smoke">
+      <!-- Showcase Content -->
+      <section>
+        <video src="media/smoke.mp4" autoplay muted></video>
+        <h1>
+          <span>A</span>
+          <span>R</span>
+          <span>O</span>
+          <span>N</span>
+          <span>-</span>
+          <span>Y</span>
+          <span>A</span>
+          <span>N</span>
+          <span>G</span>
+        </h1>
+      </section>
+    </header>
     <!--  Navbar -->
     <nav>
       <div class="brand">
