--- a/ColorTheme.html
+++ b/ColorTheme.html
@@ -25,7 +25,7 @@
     <title>Mockup Color Theme</title>
   </head>
 
-  <body class="superHero">
+  <body class="">
     <!-- Showcase -->
     <header class="showcase-smoke" id="showcase-smoke">
       <!-- Showcase Content -->
